# keras-data-processor

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRASTIVE_LEARNING_README.md  FINAL_SUMMARY.md  GITHUB_WORKFLOW_FIXES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PASSTHROUGH_FIX_SUMMARY.md  README.md  data.csv  decision_matrix.md  ideas.md  index.html  migration_guide.md  mkdocs.yml  objects.inv  pyproject.toml  pytest-fast.ini  pytest-parallel.ini  pytest-ultrafast.ini  pytest.ini  pytorch_implementation_plan.md  test_contrastive_learning.py  test_contrastive_learning_final_validation.py  test_contrastive_learning_simple.py  test_contrastive_learning_structure.py  test_model.keras  unused_diagrams_report.txt  versions.json
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: DOCS_release.yml  MANUAL_DOCS_PUBLISH.yml  MANUAL_PYPI_PUBLISH.yml  PRECOMMITS.yml  PR_PREVIEW.yml  PUBLISH_PYPI.yml  RELEASE.yml  UTESTS.yml
1.10.0/: 404.html  advanced_numerical_embeddings.html  categorical-hashing.html  distribution_aware_encoder.html  features.html  index.html  objects.inv  sitemap.xml  transformer_blocks.html
1.10.0/advanced/: custom-preprocessing.html  distribution-aware-encoding.html  feature-moe.html  numerical-embeddings.html  tabular-attention.html  transformer-blocks.html
1.10.0/api/: layers-factory.html
1.10.0/contributing/: overview.html
1.10.0/examples/: basic-examples.html  categorical-hashing-example.html  complex-examples.html  hashing.html
1.10.0/features/: categorical-features.html  cross-features.html  date-features.html  numerical-features.html  overview.html  passthrough-features.html  text-features.html
1.10.0/getting-started/: architecture.html  installation.html  motivation.html  quick-start.html
1.10.0/integrations/: overview.html  production.html
1.10.0/optimization/: auto-configuration.html  feature-selection.html  tabular-optimization.html
1.10.0/search/: search_index.json
1.11.0/: 404.html  benchmarking.html  complex_examples.html  index.html  objects.inv  sitemap.xml  tabular_attention.html  time_series_inference.html
1.11.0/advanced/: custom-preprocessing.html  distribution-aware-encoding.html  feature-moe.html  numerical-embeddings.html  tabular-attention.html  transformer-blocks.html
1.11.0/api/: layers-factory.html
1.11.0/contributing/: development.html  overview.html
1.11.0/examples/: basic-examples.html  categorical-hashing-example.html  complex-examples.html
1.11.0/features/: categorical-features.html  cross-features.html  date-features.html  numerical-features.html  overview.html  passthrough-features.html  text-features.html  time_series_features.html
1.11.0/getting-started/: architecture.html  installation.html  motivation.html  quick-start.html
1.11.0/integrations/: overview.html
1.11.0/optimization/: auto-configuration.html  feature-selection.html  tabular-optimization.html
1.11.0/reference/: parameters.html
1.11.1/: 404.html  index.html  integrations.html  objects.inv  sitemap.xml  time_series_inference.html
1.11.1/advanced/: custom-preprocessing.html  distribution-aware-encoding.html  feature-moe.html  numerical-embeddings.html  tabular-attention.html  transformer-blocks.html
1.11.1/api/: layers-factory.html
1.11.1/contributing/: overview.html
1.11.1/examples/: basic-examples.html  categorical-hashing-example.html  complex-examples.html
1.11.1/features/: categorical-features.html  cross-features.html  date-features.html  numerical-features.html  overview.html  passthrough-features.html  text-features.html  time_series_features.html
1.11.1/getting-started/: architecture.html  (+3 more)
1.11.2/: 404.html  contributing.html  feature_moe.html  feature_selection.html  index.html  sitemap.xml  time_series_inference.html
1.4.0/: index.html
1.6.0/: 404.html  index.html  objects.inv
1.7.0/: objects.inv
1.8.0/: 404.html  index.html  objects.inv
1.9.0/: 404.html  docs_requirements.txt  index.html
contributing/: index.html
docs/: README.md  advanced_numerical_embeddings.md  auto_configuration.md  complex_example.md  contributing.md  distribution_aware_encoder.md  distribution_aware_encoder_testing.md  example_usages.md  feature_moe.md  feature_selection.md  features.md  index.md  integrations.md  kdp_overview.md  layers_factory.md  motivation.md  quick_start.md  tabular_attention.md  tabular_optimization.md  time_series_features.md  time_series_inference.md  transformer_blocks.md
examples/: advanced_factory_methods_test.py  contrastive_learning_example.py  custom_preprocessing_example.py  dynamic_pipeline_examples.py  time_series_features_example.py  time_series_inference.py  time_series_inference_simple.py
kdp/: __init__.py  auto_config.py  custom_layers.py  debug.ipynb  dynamic_pipeline.py  features.py  idea.py  layers_factory.py  model_advisor.py  moe.py  pipelene.py  pipeline.py  processor.py  stats.py  test_script.py
layers_factory/: index.html
motivation/: index.html
scripts/: analyze_dataset.py  cleanup_images.sh  generate_all_diagrams.sh  generate_docstring_docs.py  generate_model_architectures.py  generate_model_diagrams.py  generate_time_series_diagrams.py  optimize_test_data.py  organize_docs_images.sh  test_optimizer.py
search/: search_index.json
test/: conftest.py  test_advanced_numerical_embedding.py  test_advanced_numerical_embeddings_integration.py  test_analyze_dataset.py  test_categorical_hashing.py  test_contrastive_learning_comprehensive.py  test_contrastive_learning_integration.py  test_custom_layers.py  test_custom_preprocessing.py  test_distribution_aware.py  test_feature_selection.py  test_feature_selection_preprocessor.py  test_gated_res_network.py  test_model_advisor.py  test_pipeline.py  test_processor.py  test_stats.py  test_stats_model_advisor_integration.py  test_stats_recommendations.py  test_time_series_batches.py  test_time_series_diagrams.py  test_time_series_feature.py  test_time_series_inference.py  test_time_series_sorting.py
tests/: test_categorical_hashing.py
(+297 files in other folders)
